[package]
name = "caffeine"
version = "0.1.0"
authors = ["thud"]
edition = "2018"

[dependencies]
clap = "~2.33.3"
atty = "0.2"
serde = { version = "1.0.*", features = ["derive"] }
serde_yaml = "~0.8.15"
directories = "~3.0"
codeforces-api = { version = "~0.3.3", features = ["serde_yaml"] }
headless_chrome = "~0.9.0"
failure = "~0.1.8"

[features]
debug-screenshot = []
