[package]
name = "caffeine-cf"
version = "0.1.3"
authors = ["thud"]
edition = "2018"
description = "CLI tool for accessing the Codeforces API easily."
repository = "https://github.com/thud/caffeine"
documentation = "https://docs.rs/caffeine-cf/"
readme = "README.md"
license = "MIT"
exclude = ["caffeine.png", "/doc/", "/example/"]

[dependencies]
clap = "2.33.3"
atty = "0.2.14"
serde = { version = "1.0.124", features = ["derive"] }
serde_yaml = "0.8.17"
directories = "3.0.1"
codeforces-api = { version = "0.3.4", features = ["serde_yaml"] }
headless_chrome = "0.9.0"
failure = "0.1.8"

[features]
debug-screenshot = []

[[bin]]
name = "caffeine"
path = "src/main.rs"
